fix(inventory): bigger gap

--- a/src/style/_game.scss
+++ b/src/style/_game.scss
@@ -80,7 +80,7 @@
 .game-board__placement__inventory {
     display: flex;
     flex-wrap: wrap;
-    gap: 5px;
+    gap: 10px;
     width: calc(100% - 30px);
     height: 100px;
     padding: 10px;
